--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "license": "CC-BY-NC-4.0",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.1",
     "highcharts": "^10.1.0",
     "time-series-library-js": "^0.1.10"
